--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       <div class="grid-12">
         <div class="column-12">12 Columns</div>
 
-        <div class="column-4">Das ist ein Teaser Test für die Kino Newsportal</div>
+        <div class="column-4">Das ist ein Teaser  Newsportal</div>
         <div class="column-1">2</div>
         <div class="column-1">3</div>
         <div class="column-1">4</div>
